# Mandlebulb-OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
include/: Applicaton.hpp  Camera.hpp  Window.hpp  imgui_impl_glfw.hpp  utils.hpp
src/: Camera.cpp  Window.cpp  main.cpp
